[package]
name = "grlm"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
docopt = "0.8"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
serde_json = "1.0"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
tokio-core = "0.1"
failure = "0.1.1"
indicatif = "0.9.0"